icon added and fonts applied. design is becoming a lot saner and list panel is no longer cut off.

--- a/public/style/base.css
+++ b/public/style/base.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400, 600 | Roboto 100, 300');
+
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +10,12 @@ h1{
   display: inline-block;
   vertical-align: top;
   margin-top: 20px;
+  font-size: 28px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+a{
+  font-family: 'Roboto', sans-serif;
 }
 
 a:visited{
@@ -37,6 +45,7 @@ a:visited{
   width:100%;
   height: 25px;
   background-color: #94B9AF;
+  z-index: 2;
 }
 
 #icon{
@@ -44,6 +53,7 @@ a:visited{
   margin-left: 10px;
   margin-top: 2px;
   display: inline-block;
+  color: #29335C;
 }
 
 #listPane{
@@ -57,7 +67,7 @@ a:visited{
   /* margin-top: 60px; */
   /* padding-bottom: 50px; */
   padding-top: 5px;
-  height: 500px;
+  height: calc(100% - 94px);
   border-style: solid;
   border-color: #94B9AF;
   border-width: 0px 5px 5px 5px;
@@ -72,8 +82,11 @@ a:visited{
   /* margin-top: 60px; */
   /* padding-left: 10px; */
   padding-top: 10px;
-  width: 100%;
+  width: calc(100% - 425px);
   height: 100%;
+  border-style: solid;
+  border-color: #94B9AF;
+  border-width: 0px 5px 0px 0px;
   /* z-index: -1; */
 }
 
@@ -97,6 +110,8 @@ a:visited{
   list-style-type: none;
   padding: 0;
   margin: 0;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
 
 .playlistItem{
@@ -119,5 +134,6 @@ a:visited{
 .trackArtist{
   font-style: italic;
   font-size: 12px;
+  font-weight: 100;
   color: #56CBF9;
 }
